--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     labels:
       io.balena.features.supervisor-api: 1
   snapcast-server:
-    build: 
+    build:
       context: ./snapcast-server
       args:
         SNAPCAST_VERSION: 0.19.0
@@ -48,23 +48,31 @@ services:
     volumes:
       - snapcast:/var/cache/snapcast
   snapcast-client:
-    build: 
+    build:
       context: ./snapcast-client
       args:
         SNAPCAST_VERSION: 0.19.0
-    restart: on-failure 
-    network_mode: host 
+    restart: on-failure
+    network_mode: host
     privileged: true
     volumes:
       - snapcast:/var/cache/snapcast
   upnp:
     build: ./upnp
-    restart: on-failure 
-    network_mode: host 
+    restart: on-failure
+    network_mode: host
     ports:
       - 49494:49494
     volumes:
       - snapcast:/var/cache/snapcast
+  wifi-connect:
+    build: ./wifi-connect
+    restart: always
+    network_mode: host
+    privileged: true
+    labels:
+      io.balena.features.dbus: '1'
+      io.balena.features.firmware: '1'
 volumes:
   spotifycache:
   bluetoothcache:
